--- a/modelTraining.ipynb
+++ b/modelTraining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,21 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m data \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mload(\u001b[39m'\u001b[39m\u001b[39mfeatures_labels.npz\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m features \u001b[39m=\u001b[39m data[\u001b[39m'\u001b[39m\u001b[39mfeatures\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m      3\u001b[0m labels \u001b[39m=\u001b[39m data[\u001b[39m'\u001b[39m\u001b[39mlabels\u001b[39m\u001b[39m'\u001b[39m]\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = np.load('features_labels.npz')\n",
     "features = data['features']\n",
@@ -37,124 +25,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/50\n",
-      "493/493 [==============================] - 31s 56ms/step - loss: 8.5807 - accuracy: 0.0000e+00\n",
-      "Epoch 2/50\n",
-      "493/493 [==============================] - 29s 58ms/step - loss: 8.5376 - accuracy: 2.5368e-04\n",
-      "Epoch 3/50\n",
-      "493/493 [==============================] - 29s 58ms/step - loss: 8.1921 - accuracy: 9.5129e-04\n",
-      "Epoch 4/50\n",
-      "493/493 [==============================] - 30s 60ms/step - loss: 7.4163 - accuracy: 0.0039\n",
-      "Epoch 5/50\n",
-      "493/493 [==============================] - 30s 62ms/step - loss: 6.4789 - accuracy: 0.0106\n",
-      "Epoch 6/50\n",
-      "493/493 [==============================] - 30s 61ms/step - loss: 5.6830 - accuracy: 0.0268\n",
-      "Epoch 7/50\n",
-      "493/493 [==============================] - 31s 62ms/step - loss: 5.0279 - accuracy: 0.0469\n",
-      "Epoch 8/50\n",
-      "493/493 [==============================] - 29s 59ms/step - loss: 4.4405 - accuracy: 0.0845\n",
-      "Epoch 9/50\n",
-      "493/493 [==============================] - 29s 58ms/step - loss: 3.8682 - accuracy: 0.1381\n",
-      "Epoch 10/50\n",
-      "493/493 [==============================] - 29s 58ms/step - loss: 3.3485 - accuracy: 0.2065\n",
-      "Epoch 11/50\n",
-      "493/493 [==============================] - 29s 58ms/step - loss: 2.8638 - accuracy: 0.2830\n",
-      "Epoch 12/50\n",
-      "493/493 [==============================] - 28s 58ms/step - loss: 2.4242 - accuracy: 0.3678\n",
-      "Epoch 13/50\n",
-      "493/493 [==============================] - 28s 58ms/step - loss: 2.0544 - accuracy: 0.4472\n",
-      "Epoch 14/50\n",
-      "493/493 [==============================] - 29s 58ms/step - loss: 1.7272 - accuracy: 0.5263\n",
-      "Epoch 15/50\n",
-      "493/493 [==============================] - 29s 58ms/step - loss: 1.4429 - accuracy: 0.6012\n",
-      "Epoch 16/50\n",
-      "493/493 [==============================] - 29s 58ms/step - loss: 1.2125 - accuracy: 0.6598\n",
-      "Epoch 17/50\n",
-      "493/493 [==============================] - 29s 59ms/step - loss: 1.0313 - accuracy: 0.7113\n",
-      "Epoch 18/50\n",
-      "493/493 [==============================] - 29s 59ms/step - loss: 0.8662 - accuracy: 0.7594\n",
-      "Epoch 19/50\n",
-      "493/493 [==============================] - 28s 56ms/step - loss: 0.7490 - accuracy: 0.7886\n",
-      "Epoch 20/50\n",
-      "493/493 [==============================] - 27s 55ms/step - loss: 0.6461 - accuracy: 0.8197\n",
-      "Epoch 21/50\n",
-      "493/493 [==============================] - 27s 55ms/step - loss: 0.5972 - accuracy: 0.8317\n",
-      "Epoch 22/50\n",
-      "493/493 [==============================] - 27s 55ms/step - loss: 0.5187 - accuracy: 0.8527\n",
-      "Epoch 23/50\n",
-      "493/493 [==============================] - 27s 55ms/step - loss: 0.4697 - accuracy: 0.8654\n",
-      "Epoch 24/50\n",
-      "493/493 [==============================] - 27s 55ms/step - loss: 0.4441 - accuracy: 0.8705\n",
-      "Epoch 25/50\n",
-      "493/493 [==============================] - 27s 55ms/step - loss: 0.3987 - accuracy: 0.8868\n",
-      "Epoch 26/50\n",
-      "493/493 [==============================] - 27s 54ms/step - loss: 0.3320 - accuracy: 0.9074\n",
-      "Epoch 27/50\n",
-      "493/493 [==============================] - 30s 62ms/step - loss: 0.3312 - accuracy: 0.9054\n",
-      "Epoch 28/50\n",
-      "493/493 [==============================] - 29s 58ms/step - loss: 0.2945 - accuracy: 0.9179\n",
-      "Epoch 29/50\n",
-      "493/493 [==============================] - 29s 58ms/step - loss: 0.2968 - accuracy: 0.9150\n",
-      "Epoch 30/50\n",
-      "493/493 [==============================] - 28s 57ms/step - loss: 0.2864 - accuracy: 0.9183\n",
-      "Epoch 31/50\n",
-      "493/493 [==============================] - 28s 58ms/step - loss: 0.2377 - accuracy: 0.9315\n",
-      "Epoch 32/50\n",
-      "493/493 [==============================] - 28s 57ms/step - loss: 0.2436 - accuracy: 0.9300\n",
-      "Epoch 33/50\n",
-      "493/493 [==============================] - 28s 57ms/step - loss: 0.2282 - accuracy: 0.9362\n",
-      "Epoch 34/50\n",
-      "493/493 [==============================] - 28s 58ms/step - loss: 0.2146 - accuracy: 0.9388\n",
-      "Epoch 35/50\n",
-      "493/493 [==============================] - 28s 58ms/step - loss: 0.2374 - accuracy: 0.9302\n",
-      "Epoch 36/50\n",
-      "493/493 [==============================] - 28s 58ms/step - loss: 0.1930 - accuracy: 0.9434\n",
-      "Epoch 37/50\n",
-      "493/493 [==============================] - 28s 58ms/step - loss: 0.1956 - accuracy: 0.9463\n",
-      "Epoch 38/50\n",
-      "493/493 [==============================] - 28s 57ms/step - loss: 0.2061 - accuracy: 0.9379\n",
-      "Epoch 39/50\n",
-      "493/493 [==============================] - 28s 57ms/step - loss: 0.1856 - accuracy: 0.9445\n",
-      "Epoch 40/50\n",
-      "493/493 [==============================] - 28s 56ms/step - loss: 0.1686 - accuracy: 0.9521\n",
-      "Epoch 41/50\n",
-      "493/493 [==============================] - 27s 54ms/step - loss: 0.1850 - accuracy: 0.9464\n",
-      "Epoch 42/50\n",
-      "493/493 [==============================] - 27s 55ms/step - loss: 0.1727 - accuracy: 0.9501\n",
-      "Epoch 43/50\n",
-      "493/493 [==============================] - 30s 61ms/step - loss: 0.1500 - accuracy: 0.9562\n",
-      "Epoch 44/50\n",
-      "493/493 [==============================] - 29s 58ms/step - loss: 0.1446 - accuracy: 0.9581\n",
-      "Epoch 45/50\n",
-      "493/493 [==============================] - 28s 58ms/step - loss: 0.1310 - accuracy: 0.9640\n",
-      "Epoch 46/50\n",
-      "493/493 [==============================] - 29s 58ms/step - loss: 0.1770 - accuracy: 0.9485\n",
-      "Epoch 47/50\n",
-      "493/493 [==============================] - 28s 57ms/step - loss: 0.1681 - accuracy: 0.9497\n",
-      "Epoch 48/50\n",
-      "493/493 [==============================] - 28s 57ms/step - loss: 0.1389 - accuracy: 0.9590\n",
-      "Epoch 49/50\n",
-      "493/493 [==============================] - 28s 57ms/step - loss: 0.1234 - accuracy: 0.9642\n",
-      "Epoch 50/50\n",
-      "493/493 [==============================] - 29s 59ms/step - loss: 0.1378 - accuracy: 0.9594\n"
+      "Epoch 1/50\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x2b6da15b790>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 21\u001b[0m\n\u001b[0;32m     18\u001b[0m int_labels \u001b[39m=\u001b[39m [label_dict[label] \u001b[39mfor\u001b[39;00m label \u001b[39min\u001b[39;00m labels]\n\u001b[0;32m     20\u001b[0m \u001b[39m# Train the model\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m model\u001b[39m.\u001b[39;49mfit(np\u001b[39m.\u001b[39;49marray(features), np\u001b[39m.\u001b[39;49marray(int_labels), epochs\u001b[39m=\u001b[39;49m\u001b[39m50\u001b[39;49m)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\keras\\utils\\traceback_utils.py:65\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     63\u001b[0m filtered_tb \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     64\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m---> 65\u001b[0m     \u001b[39mreturn\u001b[39;00m fn(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[0;32m     66\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m     67\u001b[0m     filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\keras\\engine\\training.py:1685\u001b[0m, in \u001b[0;36mModel.fit\u001b[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_batch_size, validation_freq, max_queue_size, workers, use_multiprocessing)\u001b[0m\n\u001b[0;32m   1677\u001b[0m \u001b[39mwith\u001b[39;00m tf\u001b[39m.\u001b[39mprofiler\u001b[39m.\u001b[39mexperimental\u001b[39m.\u001b[39mTrace(\n\u001b[0;32m   1678\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   1679\u001b[0m     epoch_num\u001b[39m=\u001b[39mepoch,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1682\u001b[0m     _r\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m,\n\u001b[0;32m   1683\u001b[0m ):\n\u001b[0;32m   1684\u001b[0m     callbacks\u001b[39m.\u001b[39mon_train_batch_begin(step)\n\u001b[1;32m-> 1685\u001b[0m     tmp_logs \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtrain_function(iterator)\n\u001b[0;32m   1686\u001b[0m     \u001b[39mif\u001b[39;00m data_handler\u001b[39m.\u001b[39mshould_sync:\n\u001b[0;32m   1687\u001b[0m         context\u001b[39m.\u001b[39masync_wait()\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\tensorflow\\python\\util\\traceback_utils.py:150\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    148\u001b[0m filtered_tb \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m    149\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 150\u001b[0m   \u001b[39mreturn\u001b[39;00m fn(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[0;32m    151\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m    152\u001b[0m   filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\tensorflow\\python\\eager\\polymorphic_function\\polymorphic_function.py:894\u001b[0m, in \u001b[0;36mFunction.__call__\u001b[1;34m(self, *args, **kwds)\u001b[0m\n\u001b[0;32m    891\u001b[0m compiler \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mxla\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_jit_compile \u001b[39melse\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mnonXla\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    893\u001b[0m \u001b[39mwith\u001b[39;00m OptionalXlaContext(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_jit_compile):\n\u001b[1;32m--> 894\u001b[0m   result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds)\n\u001b[0;32m    896\u001b[0m new_tracing_count \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mexperimental_get_tracing_count()\n\u001b[0;32m    897\u001b[0m without_tracing \u001b[39m=\u001b[39m (tracing_count \u001b[39m==\u001b[39m new_tracing_count)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\tensorflow\\python\\eager\\polymorphic_function\\polymorphic_function.py:959\u001b[0m, in \u001b[0;36mFunction._call\u001b[1;34m(self, *args, **kwds)\u001b[0m\n\u001b[0;32m    955\u001b[0m     \u001b[39mpass\u001b[39;00m  \u001b[39m# Fall through to cond-based initialization.\u001b[39;00m\n\u001b[0;32m    956\u001b[0m   \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    957\u001b[0m     \u001b[39m# Lifting succeeded, so variables are initialized and we can run the\u001b[39;00m\n\u001b[0;32m    958\u001b[0m     \u001b[39m# no_variable_creation function.\u001b[39;00m\n\u001b[1;32m--> 959\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_no_variable_creation_fn(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds)\n\u001b[0;32m    960\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    961\u001b[0m   _, _, filtered_flat_args \u001b[39m=\u001b[39m (\n\u001b[0;32m    962\u001b[0m       \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_variable_creation_fn\u001b[39m.\u001b[39m_function_spec  \u001b[39m# pylint: disable=protected-access\u001b[39;00m\n\u001b[0;32m    963\u001b[0m       \u001b[39m.\u001b[39mcanonicalize_function_inputs(\n\u001b[0;32m    964\u001b[0m           args, kwds))\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\tensorflow\\python\\eager\\polymorphic_function\\tracing_compiler.py:143\u001b[0m, in \u001b[0;36mTracingCompiler.__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    140\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_lock:\n\u001b[0;32m    141\u001b[0m   (concrete_function,\n\u001b[0;32m    142\u001b[0m    filtered_flat_args) \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_maybe_define_function(args, kwargs)\n\u001b[1;32m--> 143\u001b[0m \u001b[39mreturn\u001b[39;00m concrete_function\u001b[39m.\u001b[39;49m_call_flat(\n\u001b[0;32m    144\u001b[0m     filtered_flat_args, captured_inputs\u001b[39m=\u001b[39;49mconcrete_function\u001b[39m.\u001b[39;49mcaptured_inputs)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\tensorflow\\python\\eager\\polymorphic_function\\monomorphic_function.py:1757\u001b[0m, in \u001b[0;36mConcreteFunction._call_flat\u001b[1;34m(self, args, captured_inputs, cancellation_manager)\u001b[0m\n\u001b[0;32m   1753\u001b[0m possible_gradient_type \u001b[39m=\u001b[39m gradients_util\u001b[39m.\u001b[39mPossibleTapeGradientTypes(args)\n\u001b[0;32m   1754\u001b[0m \u001b[39mif\u001b[39;00m (possible_gradient_type \u001b[39m==\u001b[39m gradients_util\u001b[39m.\u001b[39mPOSSIBLE_GRADIENT_TYPES_NONE\n\u001b[0;32m   1755\u001b[0m     \u001b[39mand\u001b[39;00m executing_eagerly):\n\u001b[0;32m   1756\u001b[0m   \u001b[39m# No tape is watching; skip to running the function.\u001b[39;00m\n\u001b[1;32m-> 1757\u001b[0m   \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_build_call_outputs(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_inference_function\u001b[39m.\u001b[39;49mcall(\n\u001b[0;32m   1758\u001b[0m       ctx, args, cancellation_manager\u001b[39m=\u001b[39;49mcancellation_manager))\n\u001b[0;32m   1759\u001b[0m forward_backward \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_select_forward_and_backward_functions(\n\u001b[0;32m   1760\u001b[0m     args,\n\u001b[0;32m   1761\u001b[0m     possible_gradient_type,\n\u001b[0;32m   1762\u001b[0m     executing_eagerly)\n\u001b[0;32m   1763\u001b[0m forward_function, args_with_tangents \u001b[39m=\u001b[39m forward_backward\u001b[39m.\u001b[39mforward()\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\tensorflow\\python\\eager\\polymorphic_function\\monomorphic_function.py:381\u001b[0m, in \u001b[0;36m_EagerDefinedFunction.call\u001b[1;34m(self, ctx, args, cancellation_manager)\u001b[0m\n\u001b[0;32m    379\u001b[0m \u001b[39mwith\u001b[39;00m _InterpolateFunctionError(\u001b[39mself\u001b[39m):\n\u001b[0;32m    380\u001b[0m   \u001b[39mif\u001b[39;00m cancellation_manager \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 381\u001b[0m     outputs \u001b[39m=\u001b[39m execute\u001b[39m.\u001b[39;49mexecute(\n\u001b[0;32m    382\u001b[0m         \u001b[39mstr\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msignature\u001b[39m.\u001b[39;49mname),\n\u001b[0;32m    383\u001b[0m         num_outputs\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_num_outputs,\n\u001b[0;32m    384\u001b[0m         inputs\u001b[39m=\u001b[39;49margs,\n\u001b[0;32m    385\u001b[0m         attrs\u001b[39m=\u001b[39;49mattrs,\n\u001b[0;32m    386\u001b[0m         ctx\u001b[39m=\u001b[39;49mctx)\n\u001b[0;32m    387\u001b[0m   \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    388\u001b[0m     outputs \u001b[39m=\u001b[39m execute\u001b[39m.\u001b[39mexecute_with_cancellation(\n\u001b[0;32m    389\u001b[0m         \u001b[39mstr\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39msignature\u001b[39m.\u001b[39mname),\n\u001b[0;32m    390\u001b[0m         num_outputs\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_outputs,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    393\u001b[0m         ctx\u001b[39m=\u001b[39mctx,\n\u001b[0;32m    394\u001b[0m         cancellation_manager\u001b[39m=\u001b[39mcancellation_manager)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\tensorflow\\python\\eager\\execute.py:52\u001b[0m, in \u001b[0;36mquick_execute\u001b[1;34m(op_name, num_outputs, inputs, attrs, ctx, name)\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m     51\u001b[0m   ctx\u001b[39m.\u001b[39mensure_initialized()\n\u001b[1;32m---> 52\u001b[0m   tensors \u001b[39m=\u001b[39m pywrap_tfe\u001b[39m.\u001b[39;49mTFE_Py_Execute(ctx\u001b[39m.\u001b[39;49m_handle, device_name, op_name,\n\u001b[0;32m     53\u001b[0m                                       inputs, attrs, num_outputs)\n\u001b[0;32m     54\u001b[0m \u001b[39mexcept\u001b[39;00m core\u001b[39m.\u001b[39m_NotOkStatusException \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m     55\u001b[0m   \u001b[39mif\u001b[39;00m name \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
